<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    					android:layout_height="fill_parent" 
    					android:layout_width="fill_parent"
    					android:stretchColumns="1"
    					android:paddingTop="30dp"
    					>
    	<TableRow >
    	    <TextView android:text="@string/carnet"/>
    	    <EditText android:id="@+id/editCarnet"
    	        	  android:inputType="text"
    	        	  android:maxLength="7"/>
    	</TableRow>
    	<TableRow >
    	    <Button android:text="@string/consultar"
    	        	android:onClick="consultarAlumno"
    	        	android:layout_width="wrap_content"/>

    	    <Button
    	        android:onClick="limpiarTexto"
    	        android:text="@string/limpiar" 
    	        android:layout_width="wrap_content"/>

    	</TableRow>
    
    	<TableRow >
    	    <TextView android:text="@string/nombre"/>
    	    <EditText android:id="@+id/editNombre"
    	        	  android:inputType="text"
    	        	  android:maxLength="30"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/apellido"/>
    	    <EditText android:id="@+id/editApellido"
    	        	  android:inputType="text"
    	        	  android:maxLength="30"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/sexo"/>
    	    <EditText android:id="@+id/editSexo"
    	        	  android:inputType="text"
    	        	  android:maxLength="1"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/direccion"/>
    	    <EditText android:id="@+id/editDireccion"
    	        	  android:inputType="text"
    	        	  android:maxLength="100"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/telefono"/>
    	    <EditText android:id="@+id/editTelefono"
    	        	  android:inputType="text"
    	        	  android:maxLength="8"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/email"/>
    	    
    	    <EditText android:id="@+id/editEmail"
    	        	  android:inputType="text"
    	        	  android:maxLength="40"/>
    	</TableRow>
    	
 
    	
</TableLayout>
