<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    					android:layout_height="fill_parent" 
    					android:layout_width="fill_parent"
    					android:stretchColumns="1"
    					android:paddingTop="10dp"
    		
   >
    	<TableRow >
    	    <TextView android:text="@string/carnet"/>
    	    <EditText android:id="@+id/editCarnet"
    	        	  android:inputType="text"
    	        	  android:maxLength="7"/>
    	</TableRow>
    
    	<TableRow >
    	    <TextView android:text="@string/nombre"/>
    	    <EditText android:id="@+id/editNombre"
    	        	  android:inputType="text"
    	        	  android:maxLength="30"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/apellido"/>
    	    <EditText android:id="@+id/editApellido"
    	        	  android:inputType="text"
    	        	  android:maxLength="30"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/sexo"/>
    	   <Spinner android:id="@+id/spinner"
    	       		android:layout_width="wrap_content"
    	       		android:layout_height="wrap_content"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/direccion"/>
    	    <EditText android:id="@+id/editDireccion"
    	        	  android:inputType="text"
    	        	  android:maxLength="100"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/telefono"/>
    	    <EditText android:id="@+id/editTelefono"
    	        	  android:inputType="text"
    	        	  android:maxLength="8"
    	        	   android:hint="########"/>
    	</TableRow>
    	<TableRow >
    	    <TextView android:text="@string/email"/>

    	    <EditText
    	        android:id="@+id/editText1"
    	       android:maxLength="40"
    	        	 android:hint="ejemplo.15@hotmail.com"  >

    	        <requestFocus />
    	    </EditText>

    	</TableRow>
    	<TableRow >
    	    <Button android:text="@string/insertar"
    	        	android:onClick="insertarAlumno"/>
    	    <Button android:text="@string/limpiar"
    	        	android:onClick="limpiarTexto"/>
    	</TableRow>
    	
</TableLayout>