<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/nota"
  
   
    >
     
        <TextView android:text="@string/idEtapa"
            android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
      android:layout_marginTop="40dp"/>
		<EditText
		android:id="@+id/editidEtapa"
		android:layout_width="fill_parent"
   		 android:layout_height="wrap_content"
		android:inputType="text"
		android:maxLength="8" />
      
          <TextView 
              android:text="@string/carnet"
              android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
           />
          
          <EditText
		android:id="@+id/editCarnet"
		android:layout_width="fill_parent"
   		 android:layout_height="wrap_content"
		android:inputType="text"
		android:maxLength="7" />
          
            <TextView 
              android:text="@string/notaAlumno"
              android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
           />
          
          <EditText
		android:id="@+id/editnotaAlumno"
		android:layout_width="fill_parent"
   		 android:layout_height="wrap_content"
		android:inputType="text"
		android:maxLength="7" />
      
      
          
     
          <Button 
              android:text="@string/actualizar"
              android:onClick="ActualizarNota" 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="100dp"/>

          <Button
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="100dp"
              android:text="@string/limpiar"
              android:onClick="limpiar" />
    

          
    
</LinearLayout>
